feat(controller): add insurance company list controller

--- a/package.json
+++ b/package.json
@@ -8,14 +8,18 @@
     "start": "nodemon --watch src --delay 1 --exec 'ts-node' src/app.ts"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.11.1",
     "koa": "^2.11.0",
     "koa-bodyparser": "^4.3.0",
     "koa-multer": "^1.0.2",
     "koa-router": "^8.0.8",
+    "lodash": "^4.17.15",
     "reflect-metadata": "^0.1.13",
-    "routing-controllers": "^0.8.1-alpha.2"
+    "request": "^2.88.2",
+    "routing-controllers": "^0.8.1-alpha.2",
+    "typedi": "^0.8.0"
   },
   "devDependencies": {
     "@types/koa": "^2.11.3",
