--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "bin": {
+    "app": "./dist/index.js"
+  },
   "scripts": {
     "clean": "rm -rf dist/",
+    "build": "yarn run clean && npx tsc",
     "start": "nodemon --watch src --delay 1 --exec 'ts-node' src/index.ts"
   },
   "dependencies": {
@@ -31,6 +35,7 @@
     "@types/koa-router": "^7.4.0",
     "@types/node": "^13.11.1",
     "nodemon": "^2.0.3",
+    "pkg": "^4.4.7",
     "ts-node": "^8.8.2",
     "typescript": "^3.8.3"
   }
